--- a/favicon.html
+++ b/favicon.html
@@ -1,2 +1,2 @@
 <link rel="shortcut icon" href="favicon.png?" type="image/png">
-<script src="https://kit.fontawesome.com/a076d05399.js"></script>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
