--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ class: center, middle, inverse, title-slide
 # Análise Descritiva e Comparativa da Covid-19
 ### Guilherme Fernandes Castro de Oliveira
 ### Universidade Federal de Viçosa - Campus UFV-Florestal
-### 21/09/2021
+### 22/09/2021
 
 ---
 
@@ -173,7 +173,7 @@ class: middle, center, inverse
 &lt;img src="img/regioesidh.png" width="100%" /&gt;
 ]
   ]
-    .panel[.panel-name[Correlação]
+  .panel[.panel-name[Correlação]
 .center[
 &lt;img src="img/estadocorr.png" width="100%" /&gt;
 ]
@@ -181,6 +181,11 @@ class: middle, center, inverse
 .panel[.panel-name[Relatório]
 .center[
 &lt;img src="img/relatorio.png" width="100%" /&gt;
+]
+  ]
+.panel[.panel-name[.]
+.center[
+&lt;a target="_blank" href="https://guilhermefco.github.io/covid19brasil/"&gt;guilhermefco.github.io/covid19brasil/&lt;/a&gt;
 ]
   ]
 ]
